Fix admin language selector: use the admin color scheme and do not force white; show on narrow screens, too.

--- a/includes/css/wpglobus-admin.less
+++ b/includes/css/wpglobus-admin.less
@@ -317,4 +317,17 @@ ul.wpglobus-important {
 	}
 }
 
+// To display admin language selector on narrow screens.
+@media screen and (max-width: 782px) {
+	#wpadminbar li#wp-admin-bar-wpglobus-language-select {
+		display: block;
+		.ab-icon {
+			margin-top: -3px;
+			img {
+				height: 25px;
+			}
+		}
+	}
+}
+
 // --- EOF
